--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -107,7 +107,7 @@
         }
     </script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbXPgdFlNqGq9ES6aluPZZhUBi70EHtWQ&callback=initMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=#YourAPI-Key&callback=initMap"></script>
 </body>
 </html>
 
