--- a/src/templates/accident.html
+++ b/src/templates/accident.html
@@ -267,7 +267,7 @@
     }
     </script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbXPgdFlNqGq9ES6aluPZZhUBi70EHtWQ&callback=initMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=#YourAPI-Key&callback=initMap"></script>
 </body>
 </html>
 
