--- a/src/templates/crime_index.html
+++ b/src/templates/crime_index.html
@@ -214,7 +214,7 @@
                         info_p = '<div id="way"><div id="color-way"><span id="dot" class="red"></span></div>';
                     }
 
-                    info_p = info_p + '<div id="info-way"><div id="name-way"><h5>' + dict['name'] + '</h5></div><div id="n-accident"><p>Tasso di Criminalità: ' + String(dict['ci']) + '</p>';
+                    info_p = info_p + '<div id="info-way"><div id="name-way"><h5>' + dict['address'] + '</h5></div><div id="n-accident"><p>Tasso di Criminalità: ' + String(dict['ci']) + '</p>';
                     
                     if (dict['fur'] != 0) {
                         info_p = info_p + '</p><p>Furti: '+ String(dict['fur']) +'</p>'; 
