--- a/src/templates/accident.html
+++ b/src/templates/accident.html
@@ -143,7 +143,7 @@
                 });
                 // Aggiungi la infobox
                 let infowindow = new google.maps.InfoWindow({
-                    content: String(dict_int["count"]) + ' incidenti in questo incrocio'
+                    content:  'incrocio tra ' + dict_int['address'][0] + ' e ' + dict_int['address'][1]
                 });
 
                 // Mostra la infobox al clic sul marker
@@ -197,18 +197,12 @@
                             
                             if(dict["count"] < 10)
                             {    
-                                directionRender.setOptions({polylineOptions: { strokeColor: '#fd8700',  strokeWeight:3 }});  // Imposta il colore del percorso
+                                directionRender.setOptions({polylineOptions: { strokeColor: '#fd8700',  strokeWeight:3, clickable:false }});  // Imposta il colore del percorso
                             } else {
 
-                                directionRender.setOptions({ polylineOptions: { strokeColor: '#FF0000', strokeWeight:3 } });  // Imposta il colore del percorso
+                                directionRender.setOptions({ polylineOptions: { strokeColor: '#FF0000', strokeWeight:3, clickable:false  } });  // Imposta il colore del percorso
                             }
-                            let infowindow = new google.maps.InfoWindow({
-                                content: '<h2>'+ dict['address'] + '</h2><br><p>' + String(dict['count']) + 'incidenti in questa via'
-                            });
 
-                            directionRender.addListener('click', function() {
-                                directionRender.setOptions({ polylineOptions: { strokeColor: '#ADADAD', strokeWeight:3 } });
-                            });
                         }
 
 
