--- a/src/templates/crime_index.html
+++ b/src/templates/crime_index.html
@@ -226,7 +226,7 @@
                         info_p = info_p +'<p>Rapine: '+ String(dict['rap']) +'</p>';
                     }
                     if (dict['kill'] != 0) {
-                        info_p = info_p +'<p>Omicicdi: '+ String(dict['kill']) +'</p>';
+                        info_p = info_p +'<p>Omicidi: '+ String(dict['kill']) +'</p>';
                     }
                     if (dict['agg'] != 0) {
                         info_p = info_p +'<p>Aggressioni: '+ String(dict['agg']) +'</p>';
